2007-08-31  Bastien Nocera  <hadess@hadess.net>

	* src/totem-interface.c: (link_button_clicked_cb): Escape the URI
	before using it in a shell, otherwise the fragment ends up being
	a comment, and it's not being used

2007-08-27  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/totem-pl-parser-wm.c: (parse_asx_entry):
	Fix cut'n'paste typo, we don't want to free the duration
	when we have a starttime

2007-08-26  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c:
	(totem_embedded_parse_duration): Don't use the less restrictive
	parsing first, add support for 00:00 format

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui:
	* src/totem-preferences.c: (totem_setup_preferences):
	Remove work-around for bug 470243 and add the CellRenderer to
	the .ui file instead

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (totem_setup_preferences): 
	Block the signal from the "enable viz" toggle to avoid asking
	twice if the user really wants to enable visualisations, and
	answers yes the first time asked (Closes: #469300)

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (totem_setup_preferences):
	Work-around no visuals showing up in the visuals combo box, see
	http://bugzilla.gnome.org/show_bug.cgi?id=470243 for details

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Add audio/x-sbc as used by bluez-gnome
	for the SBC decoder

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* data/mime-type-list.txt: Patch from Sebastien Bacher
	<seb128@ubuntu.com> to add audio/ogg as a supported mime-type
	(Closes: #469525)

2007-08-25  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (skip_forward_action_callback),
	(skip_backwards_action_callback):
	* src/totem.c: (totem_seek_time_rel), (totem_action_seek_relative),
	(totem_action_seek_time), (totem_action_remote),
	(totem_action_handle_key_release), (totem_action_handle_seek),