@@ -1,5 +1,12 @@
 2007-08-31  Bastien Nocera  <hadess@hadess.net>
 
+	* src/totem.c: (update_media_menu_items): Disable the Eject
+	menu item, it's completely broken since we removed the mediadev
+	property, but nobody tested it :/
+	Proper fix will go in trunk
+
+2007-08-31  Bastien Nocera  <hadess@hadess.net>
+
 	* src/totem-interface.c: (link_button_clicked_cb): Escape the URI
 	before using it in a shell, otherwise the fragment ends up being
 	a comment, and it's not being used
